--- a/variable.html
+++ b/variable.html
@@ -60,6 +60,32 @@
 
 <p id="for"></p>
 
+<!-- for in loop -->
+<h2>JavaScript For In Loop</h2>
+<p>The for in statement loops through the properties of an object:</p>
+
+<p id="forin"></p>
+
+<!-- do while loop -->
+<h2>JavaScript Do While Loop</h2>
+
+<p id="dowhile"></p>
+
+<!-- array -->
+
+<h1>JavaScript Arrays</h1>
+
+<p id="array"></p>
+
+<!-- sorting array -->
+<h2>The sort() Method</h2>
+
+<p>The sort() method sorts an array alphabetically:</p>
+
+<p id="sort1"></p>
+<p id="sort2"></p>
+
+
 
 
 <script>
@@ -143,8 +169,48 @@ for (let i = 0; i < 5; i++) {
 }
 
 document.getElementById("for").innerHTML = text;
+
+// for in loop
+const person = {fname:"John", lname:"Doe", age:25}; 
+
+let txt = "";
+for (let x in person) {
+  txt += person[x] + " ";
+}
+
+document.getElementById("forin").innerHTML = txt;
+
+// do while loop
+let tet = ""
+let i = 0;
+
+do {
+  tet += "<br>The number is " + i;
+  i++;
+}
+while (i < 10);  
+
+document.getElementById("dowhile").innerHTML = tet;
+
+// array
+
+const place = [
+  "Kollam",
+  "Anchal",
+  "Ayoor"
+];
+document.getElementById("array").innerHTML = place;
+
+// sort array
+
+const fruits = ["Banana", "Orange", "Apple", "Mango"];
+document.getElementById("sort1").innerHTML = fruits;
+
+fruits.sort();
+document.getElementById("sort2").innerHTML = fruits;
+
 </script>
-    
+
 
 </body>
 </html>
