--- a/variable.html
+++ b/variable.html
@@ -102,8 +102,8 @@
     document.getElementById("variable").innerHTML = carName;
 
     //datatype 
-    let x = "Volvo" + 16;
-    document.getElementById("datatype").innerHTML = x;
+    let data = "Volvo" + 16;
+    document.getElementById("datatype").innerHTML = data;
 
     // operator
      let m = 5;
@@ -179,7 +179,7 @@ for (let i = 0; i < 5; i++) {
 document.getElementById("for").innerHTML = text;
 
 // for in loop
-const person = {fname:"John", lname:"Doe", age:25}; 
+const person = {fname:"John", lname:"David", age:25}; 
 
 let txt = "";
 for (let x in person) {
