form object updated

--- a/formobject.html
+++ b/formobject.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Object</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Form Object Example</title>
 </head>
 <body align="center">
-    <form id="myForm">
-        <h1>Form Object</h1>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br>
 
-        <label style="margin-top: 1%;" for="email">Email:</label>
-        <input style="margin-top: 1%;" type="email" id="email" name="email"><br>
+  <h2>Form Object</h2>
 
-       
+  <form id="myForm">
+    <label style="margin-top: 1%;" for="name">Name:</label>
+    <input  style="margin-top: 1%;" type="text" id="name" name="name" required>
 
-        <input style="margin-top: 1%;" type="submit" value="Submit">
-    </form>
+    <br>
 
-    <script>
-        document.getElementById("myForm").addEventListener("submit", function(event) {
-            event.preventDefault();
+    <label  style="margin-top: 1%;" for="email">Email:</label>
+    <input  style="margin-top: 1%;" type="email" id="email" name="email" required>
 
-            var formData = new FormData(document.getElementById("myForm"));
+    <br>
 
-            for (var pair of formData.entries()) {
-                console.log(pair[0] + ': ' + pair[1]);
-            }
+    <input  style="margin-top: 1%;" type="submit" value="Submit">
+  </form>
 
-        });
-    </script>
-    
+  <script>
+    document.getElementById("myForm").addEventListener("submit", function(event) {
+      event.preventDefault(); 
+
+      var name = document.getElementById("name").value;
+      var email = document.getElementById("email").value;
+
+      alert("Submitted!\nName: " + name + "\nEmail: " + email);
+
+    });
+  </script>
+
 </body>
 </html>
