location object added

--- a/variable.html
+++ b/variable.html
@@ -96,6 +96,10 @@
 <p id="time"></p>
 
 
+<!-- location object -->
+<h1>Navigate to Youtube</h1>
+    <button onclick="goToYouTube()">Go to YouTube</button>
+
 <script>
     // variable
     let carName = "BMW";
@@ -222,6 +226,12 @@ document.getElementById("sort2").innerHTML = fruits;
 function displayDate() {
   document.getElementById("time").innerHTML = Date();
 }
+
+// location object
+function goToYouTube() {
+            window.location.href = "https://www.youtube.com/";
+          }
+
 </script>
 
 
